message commit